--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <div class="page-header">
                     <h1>
-                        F.com</small>
+                        Falabella.com</small>
                     </h1>
                 </div>
             </div>
@@ -58,16 +58,44 @@
                 </nav>
                 <div class="col-auto d-flex justify-content-center">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#nuevoUsuarioModal">
-                        Nuevo agente
+                        data-bs-target="#nuevoAgenteModal">
+                        Nuevo Agente
+                    </button>
+                    <p>&emsp;</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#nuevoSuperModal">
+                        Nuevo Supervisor
                     </button>
                 </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-md-8">
-                        <table class="table table-striped table-responsive" id="usuarios">
+            </div>
+            <div class="col-md-12" style=" align-items: center; justify-content: center;">
+                <!-- Tabla Agente-->
+                <div class="row">
+                    <div class="col-md-7">
+                        <table class="table table-striped table-responsive" id="agentes">
                             <thead>
                                 <tr>
-                                    <th scope="col">Nombre</th>
+                                    <th scope="col">GameChanger</th>
+                                    <th scope="col">Identificación</th>
+                                    <th scope="col">Correo</th>
+                                    <th scope="col">VHUR</th>
+                                    <th scope="col">Telefono</th>
+                                    <th scope="col">VHUR Supervisor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                        <p id="texto1"></p>
+                    </div>
+                    <!-- Tabla Supervisor-->
+
+                    <div class="col-md-4">
+                        <table class="table table-striped table-responsive" id="supervisores">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Supervisor</th>
                                     <th scope="col">Identificación</th>
                                     <th scope="col">Correo</th>
                                     <th scope="col">VHUR</th>
@@ -81,57 +109,104 @@
                         <p id="texto1"></p>
                     </div>
                 </div>
-
             </div>
-            <!-- Modal -->
-            <div class="modal fade" id="nuevoUsuarioModal" tabindex="-1" aria-labelledby="nuevoUsuarioLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="nuevoUsuarioLabel">Agregar Agente</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <div class="mb-3">
-                                    <label for="nombre" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="nombre">
+        </div>
+    </div>
+    <!-- Modal Agente-->
+    <div class="modal fade" id="nuevoAgenteModal" tabindex="-1" aria-labelledby="nuevoAgenteLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="nuevoAgenteLabel">Agregar Agente</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre">
 
-                                </div>
-                                <div class="mb-3">
-                                    <label for="identificacion" class="form-label">Identificación</label>
-                                    <input type="number" class="form-control" id="identificacion">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="correo" class="form-label">Correo</label>
-                                    <input type="mail" class="form-control" id="correo">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="vhur" class="form-label">VHUR</label>
-                                    <input type="number" class="form-control" id="vhur">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="telefono" class="form-label">Telefono</label>
-                                    <input type="number" class="form-control" id="telefono">
-                                </div>
-
-                            </form>
+                        </div>
+                        <div class="mb-3">
+                            <label for="identificacion" class="form-label">Identificación</label>
+                            <input type="number" class="form-control" id="identificacion">
+                        </div>
+                        <div class="mb-3">
+                            <label for="correo" class="form-label">Correo</label>
+                            <input type="mail" class="form-control" id="correo">
+                        </div>
+                        <div class="mb-3">
+                            <label for="vhur" class="form-label">VHUR</label>
+                            <input type="number" class="form-control" id="vhur">
+                        </div>
+                        <div class="mb-3">
+                            <label for="telefono" class="form-label">Telefono</label>
+                            <input type="number" class="form-control" id="telefono">
+                        </div>
+                        <div class="mb-3">
+                            <label for="vhurAS" class="form-label">VHUR Supervisor</label>
+                            <input type="number" class="form-control" id="vhurAS">
                         </div>
 
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                            <button type="button" class="btn btn-primary" id="nuevoUsuario">Guardar</button>
-                        </div>
-                    </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" id="nuevoAgente">Guardar</button>
                 </div>
             </div>
-            <script src="https://code.jquery.com/jquery-3.6.4.js"
-                integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-            <script src="js/functions.js"></script>
-
-
         </div>
+    </div>
+
+    <!-- Modal Supervisor-->
+    <div class="modal fade" id="nuevoSuperModal" tabindex="-1" aria-labelledby="nuevoSuperLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="nuevoSuperLabel">Agregar Agente</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="nombreS" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombreS">
+
+                        </div>
+                        <div class="mb-3">
+                            <label for="identificacionS" class="form-label">Identificación</label>
+                            <input type="number" class="form-control" id="identificacionS">
+                        </div>
+                        <div class="mb-3">
+                            <label for="correoS" class="form-label">Correo</label>
+                            <input type="mail" class="form-control" id="correoS">
+                        </div>
+                        <div class="mb-3">
+                            <label for="vhurS" class="form-label">VHUR</label>
+                            <input type="number" class="form-control" id="vhurS">
+                        </div>
+                        <div class="mb-3">
+                            <label for="telefonoS" class="form-label">Telefono</label>
+                            <input type="number" class="form-control" id="telefonoS">
+                        </div>
+
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" id="nuevoSuper">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src="js/functions.js"></script>
+
+
+    </div>
 
     </div>
 
